--- a/app/src/main/res/layout/show_one_letter.xml
+++ b/app/src/main/res/layout/show_one_letter.xml
@@ -1,115 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutHelpShowOneLetter"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:background="@color/backgroundInfo">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:layout_margin="15dp">
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:clickable="false"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="2dp"
-            android:background="@drawable/button_letter" />
-        <Button
-            android:layout_width="match_parent"
-            android:clickable="false"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="2dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/button_letter" />
-        <Button
-            android:layout_width="match_parent"
-            android:clickable="false"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="2dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/button_letter" />
-        <Button
-            android:layout_width="match_parent"
-            android:clickable="false"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="2dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/button_letter" />
-        <Button
-            android:layout_width="match_parent"
-            android:clickable="false"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="2dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/button_letter" />
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:srcCompat="@mipmap/vybor_bukvy_podskazki_space" />
-
-
-        <Button
-            android:layout_width="match_parent"
-            android:clickable="false"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="2dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/button_letter" />
-        <Button
-            android:id="@+id/buttonShowOneLetter"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="2dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/vybor_bukvy_podskazki_tap" />
-        <Button
-            android:layout_width="match_parent"
-            android:clickable="false"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="2dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/button_letter" />
-        <Button
-            android:layout_width="match_parent"
-            android:clickable="false"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="2dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/button_letter" />
-        <Button
-            android:layout_width="match_parent"
-            android:clickable="false"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="2dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/button_letter" />
-        <Button
-            android:layout_width="match_parent"
-            android:clickable="false"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="2dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/button_letter" />
-
-
-</LinearLayout>
-<TextView
-android:id="@+id/textView"
-    android:layout_gravity="center"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-    android:textSize="24dp"
-    android:textColor="@color/buttonInfoNOTPressed"
-    android:layout_marginBottom="25dp"
-android:text="@string/ChooseTheLetter" />
-
-
-</LinearLayout>
+    android:orientation="horizontal"
+    android:layout_weight="1"
+    android:gravity="center_horizontal"
+    android:background="@color/backgroundInfo" />
