--- a/app/src/main/res/layout/activity_first_premiya.xml
+++ b/app/src/main/res/layout/activity_first_premiya.xml
@@ -11,7 +11,9 @@
     >
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:layout_marginTop="20dp">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -30,20 +32,29 @@
         app:srcCompat="@mipmap/zvuk" />
 
 
-    <TextView
-        android:id="@+id/textViewCoins"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="10dp"
         android:layout_height="match_parent"
-        android:layout_marginRight="10dp"
-        android:gravity="end"
-        android:text="0"
-        android:textSize="30sp" />
+        android:layout_gravity="right"
+        android:layout_weight="1"
+        android:gravity="right"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/moneta" />
+        <TextView
+            android:id="@+id/textViewCoins"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:gravity="end"
+            android:text="0"
+            android:textSize="30sp" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@mipmap/moneta" />
+    </LinearLayout>
 
 </LinearLayout>
     <ScrollView
