--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#3A3939</color>
     <color name="background">#FF4B8B71</color>
     <color name="backgroundInfo">#FFF5E6C9</color>
     <color name="buttonInfoPressed">#FFFBDB</color>
