LVL modified, lvlPastMarked

--- a/app/src/main/res/layout/activity_first_premiya.xml
+++ b/app/src/main/res/layout/activity_first_premiya.xml
@@ -9,60 +9,72 @@
     android:background="@color/background"
     tools:context=".FirstPremiya"
     >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:layout_marginTop="20dp">
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-
-        app:srcCompat="@mipmap/melodiy" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_marginEnd="160dp"
-        app:srcCompat="@mipmap/zvuk" />
-
-
     <LinearLayout
-        android:layout_width="10dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="right"
-        android:layout_weight="1"
-        android:gravity="right"
-        android:orientation="horizontal">
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_marginTop="20dp"
 
-        <TextView
-            android:id="@+id/textViewCoins"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="10dp"
-            android:gravity="end"
-            android:text="0"
-            android:textSize="30sp" />
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/moneta" />
-    </LinearLayout>
+            android:layout_weight="1"
+            android:layout_gravity="left"
+            android:layout_marginStart="-50dp"
+            app:srcCompat="@mipmap/melodiy" />
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_gravity="left"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginStart="-100dp"
+            app:srcCompat="@mipmap/zvuk" />
+
+        <LinearLayout
+            android:layout_width="10dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewCoins"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:gravity="end"
+                android:text=""
+                android:textSize="30sp" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/moneta" />
+        </LinearLayout>
+
+
+
+    </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        >
-
+        android:layout_gravity="center">
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -81,7 +93,7 @@
 
 
                 <ImageView
-                    android:id="@+id/lvl11"
+                    android:id="@+id/lvl10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -89,7 +101,7 @@
                     android:src="@drawable/artist_1_1_pugacheva_little" />
 
                 <ImageView
-                    android:id="@+id/lvl12"
+                    android:id="@+id/lvl11"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -100,7 +112,7 @@
                     android:src="@drawable/artist_1_2_timati_little" />
 
                 <ImageView
-                    android:id="@+id/lvl13"
+                    android:id="@+id/lvl12"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -120,7 +132,7 @@
 
 
                 <ImageView
-                    android:id="@+id/lvl14"
+                    android:id="@+id/lvl13"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -130,7 +142,7 @@
                     android:src="@drawable/artist_1_4_mihaylov_little" />
 
                 <ImageView
-                    android:id="@+id/lvl15"
+                    android:id="@+id/lvl14"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -142,7 +154,7 @@
                     android:src="@drawable/artist_1_5_leps_little" />
 
                 <ImageView
-                    android:id="@+id/lvl16"
+                    android:id="@+id/lvl15"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -163,7 +175,7 @@
 
 
                 <ImageView
-                    android:id="@+id/lvl17"
+                    android:id="@+id/lvl16"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -172,7 +184,7 @@
                     android:src="@drawable/artist_1_7_bilan_little" />
 
                 <ImageView
-                    android:id="@+id/lvl18"
+                    android:id="@+id/lvl17"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -183,7 +195,7 @@
                     android:src="@drawable/artist_1_8_shnur_little" />
 
                 <ImageView
-                    android:id="@+id/lvl19"
+                    android:id="@+id/lvl18"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -192,12 +204,11 @@
                     android:src="@drawable/artist_1_9_gradskiy_little" />
             </LinearLayout>
 
-
-
-
-
         </LinearLayout>
 
+
+
+</FrameLayout>
     </ScrollView>
 
 </LinearLayout>
