--- a/app/src/main/res/layout/layout_end_lvl.xml
+++ b/app/src/main/res/layout/layout_end_lvl.xml
@@ -67,7 +67,7 @@
             android:src="@mipmap/moneta"
             android:layout_gravity="center_horizontal"/>
         <TextView
-            android:id="@+id/textCoinsWon"
+            android:id="@+id/textCoinsWonAtFish"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
