--- a/app/src/main/res/layout/show_one_letter.xml
+++ b/app/src/main/res/layout/show_one_letter.xml
@@ -7,5 +7,6 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_weight="1"
+    android:layout_marginLeft="1dp"
     android:gravity="center_horizontal"
     android:background="@color/backgroundInfo" />
