google ad added

--- a/app/src/main/res/layout/activity_lvl.xml
+++ b/app/src/main/res/layout/activity_lvl.xml
@@ -65,20 +65,44 @@
             app:srcCompat="@mipmap/moneta" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textSongName"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:fontFamily="@font/optima_bold"
-        android:text="Альбом: Точно Ртуть Алоэ\nПесня: Невеста?"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textSongName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:fontFamily="@font/optima_bold"
+            android:text="Альбом: Точно Ртуть Алоэ\nПесня: Невеста?"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right">
+            <ImageView
+                android:id="@+id/freeCoins"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="10dp"
+                android:layout_gravity="right"
+                android:foregroundGravity="right"
+                android:src="@drawable/buton_free_coins"
+                android:onClick="onGetFreeCoins"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+
 
     <ImageView
         android:id="@+id/imageViewArtist"
