--- a/app/src/main/res/layout/activity_statistika.xml
+++ b/app/src/main/res/layout/activity_statistika.xml
@@ -14,6 +14,7 @@
 
 
     <TextView
+        android:id="@+id/statisticHead"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="15dp"
@@ -25,12 +26,12 @@
     </TextView>
 
     <ScrollView
+        android:id="@+id/statisticScroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/backgroundInfo"
-        >
+        android:background="@color/backgroundInfo">
     <LinearLayout
-        android:id="@+id/testView"
+        android:id="@+id/statisticLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="top"
