--- a/app/src/main/res/layout/activity_lvl.xml
+++ b/app/src/main/res/layout/activity_lvl.xml
@@ -153,8 +153,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-
-            android:hint="Введите ответ..." />
+android:inputType="text"
+            android:hint="Введите ответ..."
+            android:importantForAutofill="no" />
 
         <Button
             android:id="@+id/buttonSayAnswer"
